# EduPlatform

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  db.sqlite3  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
core/: settings.py  urls.py  views.py
courses/: admin.py  models.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_lesson_notion_url.py
courses/templatetags/: custom_filters.py  video_filters.py
payments/: models.py  urls.py  views.py
payments/migrations/: 0001_initial.py
templates/: base.html  home.html  navbar.html
templates/auth/: login.html  register.html
templates/courses/: course_list.html  detail.html  error.html
templates/payments/: choose.html  success.html
